--- a/source/css/_variables/Mist.styl
+++ b/source/css/_variables/Mist.styl
@@ -1,7 +1,8 @@
 // Variables of Mist scheme
 // =================================================
 
-$font-size-headings-base = 26px
+$font-size-headings-step = 3px
+$font-size-headings-base = 30px
 
 $brand-color             = $black-deep
 $brand-hover-color       = $brand-color
